# ICON

./: .gitignore  CLAUDE.md  README.md  config.example.yml  demo.ipynb  environment-full.yml  environment-gui.yml  environment.yml  pyproject.toml  test.ipynb
data/emb/: google-eval.csv  google-train.csv
data/raw/: data_wrangling.ipynb  ebay_100.json  ebay_Cat_data.csv  ebay_Category_Friendly_Name_Full_Data_data.csv  ebay_Category_Friendly_Name_data (1).csv  ebay_de.json  ebay_taxonomy-with-ids.en-US.txt  ebay_us.json  google.json  google_pt_taxonomy_1030.owl  wrangling.ipynb
data/repr/: build_data.ipynb
data/ret/: google-test_cover4_neg10.tsv  google-train_cover4_neg10.tsv  test_cover4_neg10.tsv  train_cover4_neg10.tsv
data/sub/: ebay-test.csv  ebay_de-20240429-0924-eval.csv  ebay_de-20240429-0924-train.csv  ebay_us_nonleaf-20240523-1349-eval.csv  (+6 more)
data_wrangling/: build_gen_data.py  build_sub_data.py  data_config.json  gen_data_wrangling.ipynb  generate_ret_data.py  ret_data_wrangling.ipynb  sub_data_wrangling.ipynb
docs/: configuration.md  fine-tuning-data.md  taxonomy-format.md
experiments/: demo.ipynb
gui/: app.py  callbacks.py  dash_app.py  dialogs.py  graph_canvas.py  layout.py  main_window.py  node_panel.py  taxonomy_adapter.py  tree_panel.py
main/: __init__.py  category_move.py  config.py  icon.py
model_training/: train_gen.ipynb  train_ret.ipynb  train_sub.ipynb
tests/: test_taxonomy.py  test_vector_index.py
utils/: __init__.py  concept_repr.py  config.py  icon.py  log_style.py  sub_models.py  taxo_utils.py  tokenset_utils.py  vector_index.py
(+39 files in other folders)
